--- a/test-output/index.html
+++ b/test-output/index.html
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,7 +101,22 @@
                     <div class="method-list-content passed suite-AdminSmokeTestSuite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-AdminSmokeTestSuite" title="admin.sothelabs.testCases.Auction" hash-for-method="createAndPublishAuction">createAndPublishAuction</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-AdminSmokeTestSuite" title="admin.sothelabs.testCases.Consignment" hash-for-method="addObjectsToConsignment">addObjectsToConsignment</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-AdminSmokeTestSuite" title="admin.sothelabs.testCases.Consignment" hash-for-method="createNewConsignment">createNewConsignment</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-AdminSmokeTestSuite" title="admin.sothelabs.testCases.Consignment" hash-for-method="editConsignment">editConsignment</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-AdminSmokeTestSuite" title="admin.sothelabs.testCases.Consignment" hash-for-method="removeObjectsFromConsignment">removeObjectsFromConsignment</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-AdminSmokeTestSuite -->
@@ -119,14 +134,35 @@
           <div class="suite-AdminSmokeTestSuite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">admin.sothelabs.testCases.Auction</span>
+              <span class="class-name">admin.sothelabs.testCases.Consignment</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createAndPublishAuction">
-                  </a> <!-- createAndPublishAuction -->
-                  <span class="method-name">createAndPublishAuction</span>
+                  <a name="addObjectsToConsignment">
+                  </a> <!-- addObjectsToConsignment -->
+                  <span class="method-name">addObjectsToConsignment</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="createNewConsignment">
+                  </a> <!-- createNewConsignment -->
+                  <span class="method-name">createNewConsignment</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="editConsignment">
+                  </a> <!-- editConsignment -->
+                  <span class="method-name">editConsignment</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="removeObjectsFromConsignment">
+                  </a> <!-- removeObjectsFromConsignment -->
+                  <span class="method-name">removeObjectsFromConsignment</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -143,13 +179,14 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;AdminSmokeTestSuite&quot;&gt;
   &lt;test thread-count=&quot;1&quot; name=&quot;AdminSmokeTest&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;admin.sothelabs.testCases.Auction&quot;&gt;
+      &lt;class name=&quot;admin.sothelabs.testCases.Consignment&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;createAndPublishAuction&quot;/&gt;
-          &lt;exclude name=&quot;addAndRemoveLots&quot;/&gt;
-          &lt;exclude name=&quot;addAndPublishLots&quot;/&gt;
+          &lt;include name=&quot;createNewConsignment&quot;/&gt;
+          &lt;include name=&quot;editConsignment&quot;/&gt;
+          &lt;include name=&quot;addObjectsToConsignment&quot;/&gt;
+          &lt;include name=&quot;removeObjectsFromConsignment&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- admin.sothelabs.testCases.Auction --&gt;
+      &lt;/class&gt; &lt;!-- admin.sothelabs.testCases.Consignment --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- AdminSmokeTest --&gt;
 &lt;/suite&gt; &lt;!-- AdminSmokeTestSuite --&gt;
@@ -189,16 +226,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'createAndPublishAuction')
-data.setCell(0, 2, 'admin.sothelabs.testCases.Auction')
-data.setCell(0, 3, 26299);
+data.setCell(0, 1, 'addObjectsToConsignment')
+data.setCell(0, 2, 'admin.sothelabs.testCases.Consignment')
+data.setCell(0, 3, 14883);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'createNewConsignment')
+data.setCell(1, 2, 'admin.sothelabs.testCases.Consignment')
+data.setCell(1, 3, 10253);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'editConsignment')
+data.setCell(2, 2, 'admin.sothelabs.testCases.Consignment')
+data.setCell(2, 3, 10223);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'removeObjectsFromConsignment')
+data.setCell(3, 2, 'admin.sothelabs.testCases.Consignment')
+data.setCell(3, 3, 5112);
 window.suiteTableData['AdminSmokeTestSuite']= { tableData: data, tableDiv: 'times-div-AdminSmokeTestSuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 26 seconds</span>
+              <span class="suite-total-time">Total running time: 40 seconds</span>
               <div id="times-div-AdminSmokeTestSuite">
               </div> <!-- times-div-AdminSmokeTestSuite -->
             </div> <!-- times-div -->
@@ -213,20 +262,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-AdminSmokeTestSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">3 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">admin.sothelabs.testCases.Auction</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">addAndRemoveLots</span>
-                <br/>
-                <span class="ignored-method-name">addAndPublishLots</span>
-                <br/>
-                <span class="ignored-method-name">editAuction</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-AdminSmokeTestSuite" class="panel">
@@ -235,22 +273,46 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">admin.sothelabs.testCases.Auction</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">admin.sothelabs.testCases.Consignment</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">startSession</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
-                <span class="method-name">createAndPublishAuction</span>
-                <span class="method-start">7108 ms</span>
+                <span class="method-name">createNewConsignment</span>
+                <span class="method-start">9319 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">afterMethodInvocation([TestResult name=createAndPublishAuction status=SUCCESS method=Auction.createAndPublishAuction()[pri...)</span>
-                <span class="method-start">33407 ms</span>
+                <span class="method-name">afterMethodInvocation([TestResult name=createNewConsignment status=SUCCESS method=Consignment.createNewConsignment()[pri:0...)</span>
+                <span class="method-start">19573 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">editConsignment</span>
+                <span class="method-start">19574 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethodInvocation([TestResult name=editConsignment status=SUCCESS method=Consignment.editConsignment()[pri:0, instance...)</span>
+                <span class="method-start">29797 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">addObjectsToConsignment</span>
+                <span class="method-start">29798 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethodInvocation([TestResult name=addObjectsToConsignment status=SUCCESS method=Consignment.addObjectsToConsignment()...)</span>
+                <span class="method-start">44681 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">removeObjectsFromConsignment</span>
+                <span class="method-start">44682 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethodInvocation([TestResult name=removeObjectsFromConsignment status=SUCCESS method=Consignment.removeObjectsFromCon...)</span>
+                <span class="method-start">49795 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
                 <span class="method-name">quitSession</span>
-                <span class="method-start">33427 ms</span>
+                <span class="method-start">49840 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
