--- a/test-output/old/AdminSmokeTestSuite/methods.html
+++ b/test-output/old/AdminSmokeTestSuite/methods.html
@@ -1,12 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>AdminSmokeTestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67ec80">  <td>19/01/10 15:46:13</td>   <td>0</td> <td title="&gt;&gt;SetupUtils.startSession()[pri:0, instance:admin.sothelabs.testCases.Auction@4411d970]">&gt;&gt;startSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@759156157</td>   <td></td> </tr>
-<tr bgcolor="946fab">  <td>19/01/10 15:46:21</td>   <td>7105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auction.createAndPublishAuction()[pri:0, instance:admin.sothelabs.testCases.Auction@4411d970]">createAndPublishAuction</td> 
-  <td>main@759156157</td>   <td></td> </tr>
-<tr bgcolor="67ec80">  <td>19/01/10 15:46:47</td>   <td>33406</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Auction@4411d970]">&lt;&lt;afterMethodInvocation</td> 
-<td>&nbsp;</td>  <td>main@759156157</td>   <td></td> </tr>
-<tr bgcolor="67ec80">  <td>19/01/10 15:46:47</td>   <td>33424</td> <td title="&lt;&lt;SetupUtils.quitSession()[pri:0, instance:admin.sothelabs.testCases.Auction@4411d970]">&lt;&lt;quitSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@759156157</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/11 10:30:29</td>   <td>0</td> <td title="&gt;&gt;SetupUtils.startSession()[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">&gt;&gt;startSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@152005629</td>   <td></td> </tr>
+<tr bgcolor="946fab">  <td>19/01/11 10:30:38</td>   <td>9313</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.createNewConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">createNewConsignment</td> 
+  <td>main@152005629</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/11 10:30:49</td>   <td>19567</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@152005629</td>   <td></td> </tr>
+<tr bgcolor="946fab">  <td>19/01/11 10:30:49</td>   <td>19568</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.editConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">editConsignment</td> 
+  <td>main@152005629</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/11 10:30:59</td>   <td>29792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@152005629</td>   <td></td> </tr>
+<tr bgcolor="946fab">  <td>19/01/11 10:30:59</td>   <td>29792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.addObjectsToConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">addObjectsToConsignment</td> 
+  <td>main@152005629</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/11 10:31:14</td>   <td>44675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@152005629</td>   <td></td> </tr>
+<tr bgcolor="946fab">  <td>19/01/11 10:31:14</td>   <td>44676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consignment.removeObjectsFromConsignment()[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">removeObjectsFromConsignment</td> 
+  <td>main@152005629</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/11 10:31:19</td>   <td>49789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SetupUtils.afterMethodInvocation(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">&lt;&lt;afterMethodInvocation</td> 
+<td>&nbsp;</td>  <td>main@152005629</td>   <td></td> </tr>
+<tr bgcolor="67ec80">  <td>19/01/11 10:31:19</td>   <td>49834</td> <td title="&lt;&lt;SetupUtils.quitSession()[pri:0, instance:admin.sothelabs.testCases.Consignment@4411d970]">&lt;&lt;quitSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@152005629</td>   <td></td> </tr>
 </table>
